Adding recorded example

--- a/Template_matching.ipynb
+++ b/Template_matching.ipynb
@@ -178,19 +178,19 @@
     "        labs=[]\n",
     "        if major:\n",
     "            chords[:,i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+4,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)\n",
-    "            labs=labs+[\"C\",\"C#\",\"D\",\"D#\",\"E\",\"F\",\"F#\",\"G\",\"G#\",\"A\",\"A#\",\"B\"]\n",
+    "            labs=labs+major_labs\n",
     "        if minor:\n",
     "            chords[:,major*12+i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+3,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)\n",
-    "            labs=labs+[\"C:min\",\"C#:min\",\"D:min\",\"D#:min\",\"E:min\",\"F:min\",\"F#:min\",\"G:min\",\"G#:min\",\"A:min\",\"A#:min\",\"B:min\"]\n",
+    "            labs=labs+minor_labs\n",
     "        if dominant7:\n",
     "            chords[:,major*12+minor*12+i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+4,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)+chroma_note_harmonics(root=i+10,alpha=alpha)\n",
-    "            labs=labs+[\"C:7\",\"C#:7\",\"D:7\",\"D#:7\",\"E:7\",\"F:7\",\"F#:7\",\"G:7\",\"G#:7\",\"A:7\",\"A#:7\",\"B:7\"]\n",
+    "            labs=labs+dominant7_labs\n",
     "        if major7:\n",
     "            chords[:,major*12+minor*12+dominant7*12+i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+4,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)+chroma_note_harmonics(root=i+11,alpha=alpha)\n",
-    "            labs=labs+[\"C:7+\",\"C#:7+\",\"D:7+\",\"D#:7+\",\"E:7+\",\"F:7+\",\"F#:7+\",\"G:7+\",\"G#:7+\",\"A:7+\",\"A#:7+\",\"B:7+\"]\n",
+    "            labs=labs+major7_labs\n",
     "        if minor7:\n",
     "            chords[:,major*12+minor*12+dominant7*12+major7*12+i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+3,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)+chroma_note_harmonics(root=i+10,alpha=alpha)\n",
-    "            labs=labs+[\"C:min7\",\"C#:min7\",\"D:min7\",\"D#:min7\",\"E:min7\",\"F:min7\",\"F#:min7\",\"G:min7\",\"G#:min7\",\"A:min7\",\"A#:min7\",\"B:min7\"]\n",
+    "            labs=labs+minor7_labs\n",
     "    return (chords,labs)"
    ]
   },
