Fixing reading dataset

--- a/Convert_to_triad.ipynb
+++ b/Convert_to_triad.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,42 +19,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def omologous(root):\n",
+    "    flats=[\"Cb\",\"Db\",\"Eb\",\"Fb\",\"Gb\",\"Ab\",\"Bb\"]\n",
+    "    omo=[\"B\",\"C#\",\"D#\",\"E\",\"F#\",\"G#\",\"A#\"]\n",
+    "    if root in flats:\n",
+    "        return omo[flats.index(root)]\n",
+    "    else:\n",
+    "        return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def chord_to_triad(lab):\n",
     "    triads_labs=[\"C\",\"C#\",\"D\",\"D#\",\"E\",\"F\",\"F#\",\"G\",\"G#\",\"A\",\"A#\",\"B\",\"C:min\",\"C#:min\",\"D:min\",\"D#:min\",\"E:min\",\"F:min\",\"F#:min\",\"G:min\",\"G#:min\",\"A:min\",\"A#:min\",\"B:min\"]\n",
     "    separated_lab=lab.split(\":\")\n",
-    "    root=separated_lab[0]\n",
-    "    if separated_lab[1][:3]==\"min\" or separated_lab[1][:3]==\"dim\":\n",
-    "        return triads_labs.index(root+\":min\")\n",
+    "    n=len(separated_lab)\n",
+    "    if n==1:\n",
+    "        return omologous(lab.split(\"/\")[0])\n",
     "    else:\n",
-    "        return triads_labs.index(root)\n",
+    "        root=separated_lab[0]\n",
+    "        if separated_lab[1][0].isdigit():\n",
+    "            return omologous(root.split(\"/\")[0])\n",
+    "        elif separated_lab[1][:3]==\"min\" or separated_lab[1][:3]==\"dim\":\n",
+    "            return omologous(root.split(\"/\")[0])+\":min\"\n",
+    "        else:\n",
+    "            return omologous(root.split(\"/\")[0])\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G:dim6 19 G:min\n"
+      "Gb:dim6 F#:min\n"
      ]
     }
    ],
    "source": [
-    "lab=\"G:dim6\"\n",
-    "print(lab,chord_to_triad(lab),triads_labs[chord_to_triad(lab)])"
+    "lab=\"Gb:dim6\"\n",
+    "print(lab,chord_to_triad(lab))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +84,67 @@
        "'min'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"C:min(7)\".split(\":\")[1][:3]"
+    "\"Cb:min(7)\".split(\":\")[1][:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gb F#\n"
+     ]
+    }
+   ],
+   "source": [
+    "lab=\"Gb\"\n",
+    "print(lab,chord_to_triad(lab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Db/b7 C#\n"
+     ]
+    }
+   ],
+   "source": [
+    "lab=\"Db/b7\"\n",
+    "print(lab,chord_to_triad(lab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Db C#\n"
+     ]
+    }
+   ],
+   "source": [
+    "lab=\"Db\"\n",
+    "print(lab,chord_to_triad(lab))"
    ]
   },
   {
