--- a/Template_matching_tutorial.ipynb
+++ b/Template_matching_tutorial.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "Text(0.5, 1.0, 'Opened music file: Major_minor_triads_piano.wav')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "0.5791764539640991"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "0.9999999344581738"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "Text(0.5, 1.0, 'Compressed chroma representation of Major_minor_triads_piano.wav')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "Text(0.5, 1.0, 'Distance between chroma and template vs time')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,16 +753,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f640969e88>"
+       "<matplotlib.legend.Legend at 0x2204c266a08>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -823,15 +823,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def estimate_chords(file_path,template_chords,mu=False,n_win=False):# can add also postprocessing features\n",
-    "    # open the file\n",
-    "    music,sr=librosa.load(file_path)\n",
-    "    # compute the chroma\n",
-    "    chroma=feat.chroma_stft(y=music,sr=sr,norm=2,hop_length=hop_length,n_fft=n_fft,tuning=0,octwidth=None)\n",
+    "def estimate_chords(music_input,template_chords,mu=False,n_win=False):# can add also postprocessing features\n",
+    "    if type(music_input)==str:\n",
+    "        # open the file\n",
+    "        music,sr=librosa.load(music_input)\n",
+    "        # compute the chroma\n",
+    "        chroma=feat.chroma_stft(y=music,sr=sr,norm=2,hop_length=hop_length,n_fft=n_fft,tuning=0,octwidth=None)\n",
+    "    else: # music_input must be np.ndarry\n",
+    "        chroma=music_input\n",
     "    # preprocessing:\n",
     "    if mu: # compression\n",
     "        chroma = librosa.mu_compress(chroma, quantize=False, mu=mu)\n",
@@ -855,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +904,7 @@
     "        for k in range(N_n_wins):\n",
     "            n_win=n_wins[k]\n",
     "            print(str(n_win),end=\", \")\n",
-    "            estimated=estimate_chords(file_path=\"Chord Examples/Major_minor_triads_piano.wav\",template_chords=chords,mu=mu,n_win=n_win)\n",
+    "            estimated=estimate_chords(music_input=\"Chord Examples/Major_minor_triads_piano.wav\",template_chords=chords,mu=mu,n_win=n_win)\n",
     "            error[i,j,k]=estimation_error(estimated,ref_annotations)\n",
     "            N_chords[i,j,k]=n_different_chords(estimated)\n",
     "        print(\"\")"
@@ -909,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
