--- a/Do thigs to dataset.ipynb
+++ b/Do thigs to dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4  01 A Hard Day's Night      N  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,21 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "'N' is not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-35-07570c03c94b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mtriads_labs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"C\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"C#\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"D\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"D#\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"E\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"F\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"F#\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"G\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"G#\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"A\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"A#\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"B\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"C:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"C#:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"D:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"D#:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"E:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"F:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"F#:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"G:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"G#:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"A:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"A#:min\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"B:min\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mii\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchord_reference_literal_reduced\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mref_annotations\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtriads_labs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchord_reference_literal_reduced\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mii\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: 'N' is not in list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chord_reference_literal_reduced=[]\n",
     "for ii in range(len(chord_reference_literal)):\n",
@@ -280,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,12 +340,15 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
+    "from sklearn import neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +440,7 @@
     "        print(\"ERROR: different lengths!\")\n",
     "        return None\n",
     "    \n",
-    "def estimate_chords(music_input,template_chords,mu=False,n_win=False):# can add also postprocessing features\n",
+    "def estimate_chords(music_input,template_chords,mu=False,n_win=False,post_smoothing=False):# can add also postprocessing features\n",
     "    if type(music_input)==str:\n",
     "        # open the file\n",
     "        music,sr=librosa.load(music_input)\n",
@@ -467,13 +458,17 @@
     "    # template matching\n",
     "    estimated,distance=template_matching(chroma,template_chords)\n",
     "    # postprocessing\n",
+    "    if post_smoothing:\n",
+    "        clf = neighbors.KNeighborsClassifier(post_smoothing, weights='uniform')\n",
+    "        clf.fit(np.arange(len(estimated)).reshape(-1, 1),estimated)\n",
+    "        estimated = clf.predict(np.arange(len(estimated)).reshape(-1, 1))\n",
     "    \n",
     "    return estimated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -661,11 +656,197 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Try with values that were good on the example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 A Hard Day's Night\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02 I Should Have Known Better\n",
+      "03 If I Fell\n",
+      "04 I'm Happy Just To Dance With You\n",
+      "05 And I Love Her\n",
+      "06 Tell Me Why\n",
+      "07 Can't Buy Me Love\n",
+      "08 Any Time At All\n",
+      "09 I'll Cry Instead\n",
+      "10 Things We Said Today\n",
+      "11 When I Get Home\n",
+      "12 You Can't Do That\n",
+      "13 I'll Be Back\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 Come Together\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02 Something\n",
+      "03 Maxwell's Silver Hammer\n",
+      "04 Oh! Darling\n",
+      "05 Octopus's Garden\n",
+      "06 I Want You\n",
+      "07 Here Comes The Sun\n",
+      "08 Because\n",
+      "09 You Never Give Me Your Money\n",
+      "10 Sun King\n",
+      "11 Mean Mr Mustard\n",
+      "12 Polythene Pam\n",
+      "13 She Came In Through The Bathroom Window\n",
+      "14 Golden Slumbers\n",
+      "15 Carry That Weight\n",
+      "16 The End\n",
+      "17 Her Majesty\n",
+      "01 No Reply\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02 I'm A Loser\n",
+      "03 Baby's In Black\n",
+      "04 Rock And Roll Music\n",
+      "05 I'll Follow The Sun\n",
+      "07 Kansas City- Hey, Hey, Hey, Hey\n",
+      "08 Eight Days a Week\n",
+      "09 Words of Love\n",
+      "10 Honey Don't\n",
+      "11 Every Little Thing\n",
+      "12 I Don't Want to Spoil the Party\n",
+      "13 What You're Doing\n",
+      "14 Everybody's Trying to Be My Baby\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 Help!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02 The Night Before\n",
+      "03 You've Got To Hide Your Love Away\n",
+      "04 I Need You\n",
+      "05 Another Girl\n",
+      "06 You're Going To Lose That Girl\n",
+      "07 Ticket To Ride\n",
+      "Average error: 0.698048629771132\n",
+      "Average number of chords: 121.46\n",
+      "Nominal average number of chords: 69.72\n"
+     ]
+    }
+   ],
+   "source": [
+    "how_many_songs=50\n",
+    "titles_all=df.title.unique()\n",
+    "titles_selected=titles_all[:how_many_songs]\n",
+    "\n",
+    "N_alphas=1\n",
+    "N_mus=1\n",
+    "N_n_wins=1\n",
+    "\n",
+    "error=0\n",
+    "N_chords=0\n",
+    "\n",
+    "N_chords_annotation=0\n",
+    "\n",
+    "for ttl in titles_selected:\n",
+    "    print(ttl)\n",
+    "    # Extract chroma from dataset\n",
+    "    chroma=df[df.title==ttl].iloc[:,0:12].to_numpy().transpose()\n",
+    "    # Extract reference chords annotations from dataset, convert it to triads strings (with 'N')\n",
+    "    chord_reference_extended=df[df.title==ttl].chords.to_list()\n",
+    "    ref_annotations_literal=[]\n",
+    "    for ii in range(len(chord_reference_extended)):\n",
+    "        ref_annotations_literal.append(chord_to_triad(chord_reference_extended[ii])) # they are literal, not numeric\n",
+    "    N_chords_annotation=N_chords_annotation+n_different_chords(ref_annotations_literal)\n",
+    "    # Analysis\n",
+    "    chords,chords_labs=chroma_chords(0)\n",
+    "    chords_labs.append('N')\n",
+    "    ref_annotations=[]\n",
+    "    for ii in range(len(ref_annotations_literal)):\n",
+    "        ref_annotations.append(chords_labs.index(ref_annotations_literal[ii])) #they are now numeric, with N as 24+1=25\n",
+    "    estimated=estimate_chords(music_input=chroma,template_chords=chords,mu=40,n_win=10,post_smoothing=15)\n",
+    "    error=error+estimation_error(estimated,ref_annotations)\n",
+    "    N_chords=N_chords+n_different_chords(estimated)\n",
+    "error=error/how_many_songs\n",
+    "N_chords=N_chords/how_many_songs\n",
+    "N_chords_annotation=N_chords_annotation/how_many_songs\n",
+    "\n",
+    "print(\"Average error: \"+str(error))\n",
+    "print(\"Average number of chords: \"+str(N_chords))\n",
+    "print(\"Nominal average number of chords: \"+str(N_chords_annotation))"
+   ]
   },
   {
    "cell_type": "code",
