--- a/Do thigs to dataset.ipynb
+++ b/Do thigs to dataset.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,25 +380,31 @@
     "    chroma=np.roll(model, root)\n",
     "    return chroma\n",
     "\n",
+    "# Chroma representation of chords with harmonics\n",
     "def chroma_chords(alpha,major=True,minor=True,dominant7=False,major7=False,minor7=False):\n",
     "    chords=np.zeros(shape=(12,major*12+minor*12+dominant7*12+major7*12+minor7*12))\n",
     "    labs=[]\n",
     "    for i in range(12): #loop on possible root notes\n",
     "        if major:\n",
     "            chords[:,i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+4,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)\n",
-    "            labs=labs+major_labs\n",
+    "            if i==0:\n",
+    "                labs=labs+major_labs\n",
     "        if minor:\n",
     "            chords[:,major*12+i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+3,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)\n",
-    "            labs=labs+minor_labs\n",
+    "            if i==0:\n",
+    "                labs=labs+minor_labs\n",
     "        if dominant7:\n",
     "            chords[:,major*12+minor*12+i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+4,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)+chroma_note_harmonics(root=i+10,alpha=alpha)\n",
-    "            labs=labs+dominant7_labs\n",
+    "            if i==0:\n",
+    "                labs=labs+dominant7_labs\n",
     "        if major7:\n",
     "            chords[:,major*12+minor*12+dominant7*12+i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+4,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)+chroma_note_harmonics(root=i+11,alpha=alpha)\n",
-    "            labs=labs+major7_labs\n",
+    "            if i==0:\n",
+    "                labs=labs+major7_labs\n",
     "        if minor7:\n",
     "            chords[:,major*12+minor*12+dominant7*12+major7*12+i]=chroma_note_harmonics(root=i,alpha=alpha)+chroma_note_harmonics(root=i+3,alpha=alpha)+chroma_note_harmonics(root=i+7,alpha=alpha)+chroma_note_harmonics(root=i+10,alpha=alpha)\n",
-    "            labs=labs+minor7_labs\n",
+    "            if i==0:\n",
+    "                labs=labs+minor7_labs\n",
     "    return (chords,labs)\n",
     "\n",
     "def normalize_2(chroma):\n",
@@ -472,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -509,38 +515,47 @@
      "output_type": "stream",
      "text": [
       "01 A Hard Day's Night\n",
-      "alpha = 0.0; mu = 0; n_win = 0, "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10, 20, 30, 40, \n",
-      "alpha = 0.0; mu = 20; n_win = 0, 10, 20, 30, 40, "
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-fd9e97b2083a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m                 \u001b[0mn_win\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn_wins\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_win\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\", \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m                 \u001b[0mestimated\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mestimate_chords\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmusic_input\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mchroma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtemplate_chords\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mchords\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmu\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmu\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mn_win\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn_win\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m                 \u001b[0merror\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mestimation_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mestimated\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mref_annotations\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m                 \u001b[0mN_chords\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mN_chords\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mn_different_chords\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mestimated\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-9-4779da8be3b8>\u001b[0m in \u001b[0;36mestimate_chords\u001b[1;34m(music_input, template_chords, mu, n_win, post_smoothing)\u001b[0m\n\u001b[0;32m    103\u001b[0m     \u001b[0mchroma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnormalize_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchroma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m     \u001b[1;31m# template matching\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 105\u001b[1;33m     \u001b[0mestimated\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdistance\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtemplate_matching\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchroma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtemplate_chords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    106\u001b[0m     \u001b[1;31m# postprocessing\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mpost_smoothing\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-9-4779da8be3b8>\u001b[0m in \u001b[0;36mtemplate_matching\u001b[1;34m(chroma, chords)\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnchords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[0mdist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mch\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchroma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mchords\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mch\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m             \u001b[0mest_chords\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m             \u001b[0mest_dist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mest_chords\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mest_dist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36margmin\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\numpy\\core\\fromnumeric.py\u001b[0m in \u001b[0;36margmin\u001b[1;34m(a, axis, out)\u001b[0m\n\u001b[0;32m   1265\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1266\u001b[0m     \"\"\"\n\u001b[1;32m-> 1267\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_wrapfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'argmin'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1268\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1269\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\numpy\\core\\fromnumeric.py\u001b[0m in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 61\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mbound\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     62\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m         \u001b[1;31m# A TypeError occurs if the object does have such a method in its\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "alpha = 0.0; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.0; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.0; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.0; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.25; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.25; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.25; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.25; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.5; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.5; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.5; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.5; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.75; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.75; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.75; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.75; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 1.0; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 1.0; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 1.0; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 1.0; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "02 I Should Have Known Better\n",
+      "alpha = 0.0; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.0; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.0; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.0; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.25; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.25; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.25; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.25; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.5; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.5; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.5; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.5; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.75; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.75; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.75; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 0.75; mu = 60; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 1.0; mu = 0; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 1.0; mu = 20; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 1.0; mu = 40; n_win = 0, 10, 20, 30, 40, \n",
+      "alpha = 1.0; mu = 60; n_win = 0, 10, 20, 30, 40, \n"
      ]
     }
    ],
@@ -593,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -652,20 +667,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01 A Hard Day's Night\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "01 A Hard Day's Night\n",
       "02 I Should Have Known Better\n",
       "03 If I Fell\n",
       "04 I'm Happy Just To Dance With You\n",
@@ -677,34 +679,8 @@
       "10 Things We Said Today\n",
       "11 When I Get Home\n",
       "12 You Can't Do That\n",
-      "13 I'll Be Back\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "01 Come Together\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "13 I'll Be Back\n",
+      "01 Come Together\n",
       "02 Something\n",
       "03 Maxwell's Silver Hammer\n",
       "04 Oh! Darling\n",
@@ -721,21 +697,7 @@
       "15 Carry That Weight\n",
       "16 The End\n",
       "17 Her Majesty\n",
-      "01 No Reply\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n",
-      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "01 No Reply\n",
       "02 I'm A Loser\n",
       "03 Baby's In Black\n",
       "04 Rock And Roll Music\n",
@@ -747,34 +709,8 @@
       "11 Every Little Thing\n",
       "12 I Don't Want to Spoil the Party\n",
       "13 What You're Doing\n",
-      "14 Everybody's Trying to Be My Baby\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "01 Help!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\franc\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:50: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "14 Everybody's Trying to Be My Baby\n",
+      "01 Help!\n",
       "02 The Night Before\n",
       "03 You've Got To Hide Your Love Away\n",
       "04 I Need You\n",
@@ -838,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
