--- a/Model validation on The Beatles dataset.ipynb
+++ b/Model validation on The Beatles dataset.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model validation on The Beatles dataset\n",
+    "This notebook actually shows how poor the model performs on complete songs. We uses songs by The Beatles and [reference annotations  by Christopher Harte](http://isophonics.net/content/reference-annotations-beatles \"Chris Hartes's Annotations\")."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading dataset with Beatles songs chorma and annotated chords (see Resources/Create The Beatles dataset.ipynb\" to know how the dataset was created)\n",
     "df=pd.read_csv(\"The Beatles dataset.csv\")"
    ]
   },
@@ -173,7 +182,15 @@
     }
    ],
    "source": [
+    "# How the dataset looks\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that the annotation 'N' stands for a section where there is no music (ex. silence or spoken words)."
    ]
   },
   {
@@ -182,6 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get all titles of different songs\n",
     "titles=df.title.unique()"
    ]
   },
@@ -217,6 +235,7 @@
     }
    ],
    "source": [
+    "# Get chromas and reference annotations for a specific song\n",
     "chroma=df[df.title==ex_title].iloc[:,0:12].to_numpy().transpose()\n",
     "chord_reference_literal=df[df.title==ex_title].chords.to_list()\n",
     "print(\"chroma.shape = \",chroma.shape,\"chord_reference_literal len = \",len(chord_reference_literal))"
@@ -228,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DA SISTEMARE\n",
+    "# Extract triad from full chord (see \"Resources/Convert_to_triad.ipynb\" for full explanation)\n",
     "def omologous(root):\n",
     "    flats=[\"Cb\",\"Db\",\"Eb\",\"Fb\",\"Gb\",\"Ab\",\"Bb\"]\n",
     "    omo=[\"B\",\"C#\",\"D#\",\"E\",\"F#\",\"G#\",\"A#\"]\n",
@@ -270,29 +289,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "set()\n"
-     ]
-    }
-   ],
-   "source": [
-    "possible=[\"N\",\"C\",\"C#\",\"D\",\"D#\",\"E\",\"F\",\"F#\",\"G\",\"G#\",\"A\",\"A#\",\"B\",\"C:min\",\"C#:min\",\"D:min\",\"D#:min\",\"E:min\",\"F:min\",\"F#:min\",\"G:min\",\"G#:min\",\"A:min\",\"A#:min\",\"B:min\"]\n",
-    "print([x for x in chord_reference_literal_reduced if x not in possible])\n",
-    "print(set(chord_reference_literal_reduced)-set([\"N\",\"C\",\"C#\",\"D\",\"D#\",\"E\",\"F\",\"F#\",\"G\",\"G#\",\"A\",\"A#\",\"B\",\"C:min\",\"C#:min\",\"D:min\",\"D#:min\",\"E:min\",\"F:min\",\"F#:min\",\"G:min\",\"G#:min\",\"A:min\",\"A#:min\",\"B:min\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# CHecking for all\n",
+    "# Checking that chords to triad does not leave any \"non triad\" chord\n",
     "df=pd.read_csv(\"The Beatles dataset.csv\")\n",
     "all_chords=df.chords.to_list()\n",
     "all_reduced=[]\n",
@@ -302,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's start"
+    "## Analyze the dataset"
    ]
   },
   {
@@ -359,8 +358,6 @@
     "dominant7_labs=[\"C:7\",\"C#:7\",\"D:7\",\"D#:7\",\"E:7\",\"F:7\",\"F#:7\",\"G:7\",\"G#:7\",\"A:7\",\"A#:7\",\"B:7\"]\n",
     "major7_labs=[\"C:maj7\",\"C#:maj7\",\"D:maj7\",\"D#:maj7\",\"E:maj7\",\"F:maj7\",\"F#:maj7\",\"G:maj7\",\"G#:maj7\",\"A:maj7\",\"A#:maj7\",\"B:maj7\"]\n",
     "minor7_labs=[\"C:min7\",\"C#:min7\",\"D:min7\",\"D#:min7\",\"E:min7\",\"F:min7\",\"F#:min7\",\"G:min7\",\"G#:min7\",\"A:min7\",\"A#:min7\",\"B:min7\"]\n",
-    "\n",
-    "#chords_labs=major_labs+minor_labs+dominant7_labs#+major7_labs+minor7_labs\n",
     "\n",
     "chroma_labs=[\"C\",\"C#\",\"D\",\"D#\",\"E\",\"F\",\"F#\",\"G\",\"G#\",\"A\",\"A#\",\"B\"]\n",
     "\n",
