--- a/Template_matching_tutorial.ipynb
+++ b/Template_matching_tutorial.ipynb
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is better to have chroma representations of notes and chords that take into account the presence of harmonics. We first create a note and then sum the notes created to form chords. The paramenter $\\alpha \\in \\left[0,1\\right]$ is resposible for the intensity of the harmonics, with $\\alpha=0$ we obtain the same chords as above."
+    "It is better to have chroma representations of notes and chords that take into account the presence of harmonics. We first create a note and then sum the notes created to form chords. The paramenter $\\alpha \\in \\left[0,1\\right]$ is resposible for the intensity of the harmonics, with $\\alpha=0$ we obtain notes and chords without harmonics."
    ]
   },
   {
