Adding more comments

--- a/Template_matching_tutorial.ipynb
+++ b/Template_matching_tutorial.ipynb
@@ -456,6 +456,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define the template_matching function that, given a set of chorma vectors and a set if template chroma vectors for chords, classifies every chroma vectors assigning the label of the template at minimum distance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -481,6 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# A function to save the esteimated annotation in a suitable way that is compatible with Sonic Visualizer\n",
     "def write_lab_file(name,est_chords,sr,hop_length,chords_labs):\n",
     "    file = open(name+\".lab\",\"w\")\n",
     "    beg=0\n",
@@ -508,6 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Count how many chord changes have been made\n",
     "def n_different_chords(est_chords):\n",
     "    curr=est_chords[0]\n",
     "    N_chords=1\n",
@@ -732,6 +741,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# A function that contains the complete estimation process (preprocessing + estimation + postprocessing)\n",
+    "# The postprocessing is explained later\n",
     "def estimate_chords(music_input,template_chords,mu=False,n_win=False,post_smoothing=False):# can add also postprocessing features\n",
     "    if type(music_input)==str:\n",
     "        # open the file\n",
@@ -869,7 +880,7 @@
    "metadata": {},
    "source": [
     "## Postprocessing\n",
-    "We apply a KNN classifier to reclassify the frames, with only the time feature and the results of the template matching estimation as label. This procedure serves as a smoother, in the sense that occasional errors are removed"
+    "We apply a KNN classifier to reclassify the frames, with only the time feature and the results of the template matching estimation as label. This procedure works as a smoother, in the sense that occasional errors are removed"
    ]
   },
   {
@@ -1206,6 +1217,7 @@
     }
    ],
    "source": [
+    "# I run the estimation with the \"best\" parameters\n",
     "chords,chords_labs=chroma_chords(0)\n",
     "estimated=estimate_chords(music_input=\"Chord Examples/Major_minor_triads_piano.wav\",template_chords=chords,mu=40,n_win=10,post_smoothing=15)\n",
     "plt.figure(figsize=(16.4, 3.6))\n",
@@ -1221,6 +1233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Utility to get the beginning of every chord and its label in string representation\n",
     "def time_chord(est_chords,sr,hop_length,chords_labs):\n",
     "    times=[]\n",
     "    chords=[]\n",
