--- a/Resources/Create The Beatles dataset.ipynb
+++ b/Resources/Create The Beatles dataset.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,90 @@
       "..\\The Beatles Annotations\\Revolver\\11 Doctor Robert.mp3\t*\n",
       "..\\The Beatles Annotations\\Revolver\\12 I Want To Tell You.mp3\t*\n",
       "..\\The Beatles Annotations\\Revolver\\13 Got To Get You Into My Life.mp3\t*\n",
-      "..\\The Beatles Annotations\\Revolver\\14 Tomorrow Never Knows.mp3\t"
+      "..\\The Beatles Annotations\\Revolver\\14 Tomorrow Never Knows.mp3\t*\n",
+      "Scanning folder:\n",
+      "..\\The Beatles Annotations\\Rubber Soul\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\01 Drive My Car.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\02 Norwegian Wood (This Bird Has Flown).mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\03 You Won't See Me.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\04 Nowhere Man.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\05 Think For Yourself.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\06 The Word.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\07 Michelle.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\08 What Goes On.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\09 Girl.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\10 I'm Looking Through You.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\11 In My Life.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\12 Wait.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\13 If I Needed Someone.mp3\t*\n",
+      "..\\The Beatles Annotations\\Rubber Soul\\14 Run For Your Life.mp3\t*\n",
+      "Scanning folder:\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\01 Sgt. Pepper's Lonely Hearts Club Band.mp3\t.lab file does not exist!\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\02 With A Little Help From My Friends.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\03 Lucy In The Sky With Diamonds.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\04 Getting Better.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\05 Fixing A Hole.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\06 She's Leaving Home.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\07 Being For The Benefit Of Mr. Kite.mp3\t.lab file does not exist!\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\08 Within You Without You.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\09 When I'm Sixty-Four.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\10 Lovely Rita.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\11 Good Morning Good Morning.mp3\t*\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\12 Sgt. Pepper's Lonely Hearts Club Band (Reprise).mp3\t.lab file does not exist!\n",
+      "..\\The Beatles Annotations\\Sgt. Pepper's Lonely Hearts Club Band\\13 A Day In The Life.mp3\t*\n",
+      "Scanning folder:\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\n",
+      "Scanning folder:\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_01 Back in the USSR.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_02 Dear Prudence.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_03 Glass Onion.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_04 Ob-La-Di, Ob-La-Da.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_05 Wild Honey Pie.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_06 The Continuing Story of Bungalow Bill.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_07 While My Guitar Gently Weeps.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_08 Happiness is a Warm Gun.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_09 Martha My Dear.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_10 I'm So Tired.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_11 Black Bird.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_12 Piggies.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_13 Rocky Raccoon.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_14 Don't Pass Me By.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_15 Why Don't We Do It In The Road_.mp3\t.lab file does not exist!\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_16 I Will.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 1]\\CD1_-_17 Julia.mp3\t*\n",
+      "Scanning folder:\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_01 Birthday.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_02 Yer Blues.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_03 Mother Nature's Son.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_04 Everybody's Got Something To Hide Except Me and My Monkey.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_05 Sexy Sadie.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_06 Helter Skelter.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_07 Long Long Long.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_08 Revolution 1.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_09 Honey Pie.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_10 Savoy Truffle.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_11 Cry Baby Cry.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_12 Revolution 9.mp3\t*\n",
+      "..\\The Beatles Annotations\\The Beatles (White Album)\\The Beatles (White Album) [Disc 2]\\CD2_-_13 Good Night.mp3\t*\n",
+      "Scanning folder:\n",
+      "..\\The Beatles Annotations\\With The Beatles\n",
+      "..\\The Beatles Annotations\\With The Beatles\\01 It Won't Be Long.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\02 All I've Got To Do.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\03 All My Loving.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\04 Don't Bother Me.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\05 Little Child.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\06 Till There Was You.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\07 Please Mister Postman.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\08 Roll Over Beethoven.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\09 Hold Me Tight.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\10 You Really Got A Hold On Me.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\11 I Wanna Be Your Man.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\12 Devil In Her Heart.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\13 Not A Second Time.mp3\t*\n",
+      "..\\The Beatles Annotations\\With The Beatles\\14 Money.mp3\t*\n"
      ]
     }
    ],
