Update Model validation on The Beatles dataset.ipynb
Rewriting initial description

--- a/Model validation on The Beatles dataset.ipynb
+++ b/Model validation on The Beatles dataset.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Model validation on The Beatles dataset\n",
-    "This notebook actually shows how poor the model performs on complete songs. We uses songs by The Beatles and [reference annotations  by Christopher Harte](http://isophonics.net/content/reference-annotations-beatles \"Chris Hartes's Annotations\")."
+    "This notebook was born with the purpose of finding good hyperparameters by training on a large amount of \"real data\". Unfortunately the model seems to perform very poorly on actual songs. We uses songs by The Beatles and [reference annotations  by Christopher Harte](http://isophonics.net/content/reference-annotations-beatles \"Chris Hartes's Annotations\").\n",
+    "\n",
+    "This notebook is a reminder that better methods exist and shall be used in song applications."
    ]
   },
   {
